--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>React App</title>
   </head>
 
-  <body class="bg-[#161616] text-white">
-    <div id="root"></div>
+  <body class="bg-[#161616] text-white ">
+    <div id="root" class="font-Roboto"></div>
   </body>
 </html>
